update list and grid product

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -115,10 +115,11 @@
           <div class="footer-links">
             <h3 class="links-title">Working hours<a class="expander visible-xs" href="#TabBlock-5">+</a></h3>
             <div class="tabBlock" id="TabBlock-5">
-              <div class="footer-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</div>
-              <div class="footer-description"> <b>Monday-Friday:</b> 8.30 a.m. - 5.30 p.m.<br>
-                <b>Saturday:</b> 9.00 a.m. - 2.00 p.m.<br>
-                <b>Sunday:</b> Closed </div>
+              <div class="footer-description">ĐĂNG MINH COMPUTER.</div>
+              <div class="footer-description">
+                <p>Chuyên kinh doanh các loại PC - LPTOP - LCD - GAMING- CAMERA - MÁY TÍNH VĂN PHÒNG</p>
+                <b>Địa chỉ:</b>  29/16 Đường CMT8 - Phường 3 - TP. Tây Ninh.<br>
+              </div>
               <div class="payment">
                 <ul>
                   <li><a href="#"><img title="Visa" alt="Visa" src="./../assets/images/visa.png"></a></li>
@@ -135,10 +136,10 @@
     <div class="footer-coppyright">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 col-xs-12 coppyright"> Copyright © 2017 <a href="#"> ShopMart </a>. All Rights Reserved. </div>
+          <div class="col-sm-6 col-xs-12 coppyright"> Copyright © 2023 <a href="#"> ĐMC Store </a>. All Rights Reserved. </div>
           <div class="col-sm-6 col-xs-12">
             <ul class="footer-company-links">
-              <li> <a href="about_us.html">About ShopMart</a> </li>
+              <li> <a href="about_us.html">About ĐMC</a> </li>
               <li> <a href="#">Careers</a> </li>
               <li> <a href="#">Privacy Policy</a> </li>
             </ul>
