--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -55,21 +55,21 @@
               </div>
               <div class="sorter">
                 <div class="short-by">
-                  <label>Sort By:</label>
+                  <label>Sắp xếp:</label>
                   <select>
-                    <option selected="selected">Position</option>
-                    <option>Name</option>
-                    <option>Price</option>
-                    <option>Size</option>
+                    <option selected="selected">Giá tăng dần</option>
+                    <option>Giá giảm dần</option>
+                    <!-- <option>Price</option>
+                    <option>Size</option> -->
                   </select>
                 </div>
                 <div class="short-by page">
-                  <label>Show:</label>
+                  <label>Hiện thị:</label>
                   <select>
                     <option selected="selected">18</option>
-                    <option>20</option>
-                    <option>25</option>
-                    <option>30</option>
+                    <option>27</option>
+                    <option>36</option>
+                    <option>45</option>
                   </select>
                 </div>
               </div>
@@ -96,16 +96,23 @@
                         <div class="info-inner">
                           <div class="item-title"> <a title="{{item.productName}}" [routerLink]="['/chi-tiet']" [queryParams]="{slug: item.productNameSlug}">{{item.productName}}</a> </div>
                           <div class="item-content">
-                            <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
+                            <div class="rating"> 
+                               <!-- Tạo sao đánh giá -->
+                                <ng-container *ngIf="item.rate >= 0">
+                                  <i class="fa fa-star" *ngFor="let rate of counterRate(item.rate)"></i>
+                                  <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item.rate)"></i>
+                                </ng-container>
+                            </div>
                             <div class="item-price">
-                              <div class="price-box"> <span class="regular-price"> <span class="price">{{item.price | currency: "VND" }}</span> </span> </div>
-                               <ng-container *ngIf="item.promotionPrice == 0">
+                              <div class="price-box" *ngIf="item.promotionPrice == 0"> 
+                                <span class="regular-price" > <span class="price">{{item.price | currency: "VND" }}</span> </span> </div>
+                               <ng-container *ngIf="item.promotionPrice > 0">
                                 <p class="special-price"> <span class="price-label">Giá khuyến mãi</span> <span class="price"> {{item.promotionPrice | currency: "VND" }} </span> </p>
                                 <p class="old-price"> <span class="price-label">Giá cũ:</span> <span class="price"> {{item.price | currency: "VND" }} </span> </p>
                               </ng-container>
                             </div>
                             <div class="pro-action">
-                              <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
+                              <button type="button" class="add-to-cart"><span> Thêm giỏ hàng</span> </button>
                             </div>
                           </div>
                         </div>
@@ -244,31 +251,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="color-area">
-                <h2 class="saider-bar-title">Color</h2>
-                <div class="color">
-                  <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="size-area">
-                <h2 class="saider-bar-title">Size</h2>
-                <div class="size">
-                  <ul>
-                    <li><a href="#">S</a></li>
-                    <li><a href="#">L</a></li>
-                    <li><a href="#">M</a></li>
-                    <li><a href="#">XL</a></li>
-                    <li><a href="#">XXL</a></li>
-                  </ul>
-                </div>
-              </div>
+              
             </div>
           </div>
           <div class="block product-price-range ">
@@ -326,21 +309,7 @@
               </div>
             </div>
           </div>
-          <div class="block compare">
-            <div class="sidebar-bar-title">
-              <h3>Compare Products (2)</h3>
-            </div>
-            <div class="block-content">
-              <ol id="compare-items">
-                <li class="item"> <a [routerLink]="['/so-sanh']" title="Remove This Item" class="remove-cart"><i class="icon-close"></i></a> <a href="#" class="product-name"><i class="fa fa-angle-right"></i>&nbsp; Vestibulum porta tristique porttitor.</a> </li>
-                <li class="item"> <a [routerLink]="['/so-sanh']" title="Remove This Item" class="remove-cart"><i class="icon-close"></i></a> <a href="#" class="product-name"><i class="fa fa-angle-right"></i>&nbsp; Lorem ipsum dolor sit amet</a> </li>
-              </ol>
-              <div class="ajax-checkout">
-                <button type="submit" title="Submit" class="button button-compare"> <span>Compare</span></button>
-                <button type="submit" title="Submit" class="button button-clear"> <span>Clear All</span></button>
-              </div>
-            </div>
-          </div>
+         
           <div class="single-img-add sidebar-add-slider ">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> 
               <!-- Indicators -->
