--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -82,7 +82,7 @@
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div>
-                                <div class="mt-button quick-view"> <a routerLink="/xem-nhanh"> <i
+                                <div class="mt-button quick-view"> <a (click)="openModalQuickView()"> <i
                                       class="fa fa-search"></i> </a> </div>
                               </div>
                             </div>
@@ -492,7 +492,7 @@
       </div>
     </div>
   </section>
-
 </ng-container>
+<app-quick-view (sendEventToParent)="listenEventFromChild($event)" *ngIf="isShowQuickView"></app-quick-view>
 <ngx-spinner [fullScreen]="true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)"
   color="#0b499c"></ngx-spinner>
