--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,8 @@
     <router-outlet (activate)="onActivate($event)"></router-outlet>
     <app-footer></app-footer>
 </div>
+<!-- <div class="fb-customerchat"
+     page_id="100094286783003">
+</div> -->
 <scroll-top></scroll-top>
 <ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
