--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -218,21 +218,18 @@
             <div class="block-content">
               <div class="slider-range">
                 <div data-label-reasult="Range:" data-min="0" data-max="500" data-unit="$" class="slider-range-price" data-value-min="50" data-value-max="350"></div>
-                <div class="amount-range-price">Range: $10 - $550</div>
+                
+                <ng-container *ngFor="let group of groupSearch">          
+                <div class="amount-range-price">{{group.filterDisplayText}}</div>
                 <ul class="check-box-list">
+                  <ng-container *ngFor="let item of group.itemFilterValues"> 
                   <li>
                     <input type="checkbox" id="p1" name="cc" />
-                    <label for="p1"> <span class="button"></span> $20 - $50<span class="count">(0)</span> </label>
-                  </li>
-                  <li>
-                    <input type="checkbox" id="p2" name="cc" />
-                    <label for="p2"> <span class="button"></span> $50 - $100<span class="count">(0)</span> </label>
-                  </li>
-                  <li>
-                    <input type="checkbox" id="p3" name="cc" />
-                    <label for="p3"> <span class="button"></span> $100 - $250<span class="count">(0)</span> </label>
-                  </li>
+                    <label for="p1"> <span class="button"></span> {{item.filterValueDisplayText}}<span class="count">(0)</span> </label>
+                  </li> 
+                 </ng-container>
                 </ul>
+              </ng-container>
               </div>
             </div>
           </div>
