--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -75,7 +75,7 @@
               </div>
             </div>
             <div class="product-grid-area">
-              <ul class="products-grid" *ngFor="let item of listProduct?.data">
+              <ul class="products-grid" *ngFor="let item of listProduct">
                 <li class="item col-lg-4 col-md-4 col-sm-6 col-xs-6 ">
                   <div class="product-item">
                     <div class="item-inner">
@@ -122,6 +122,7 @@
                 </li>
               </ul>
             </div>
+
             <div class="pagination-area">
               <ul>
                 <li><a class="active" href="#">1</a></li>
