--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,19 @@
 <app-slider></app-slider>
 <!-- service section -->
-
 <ng-container *ngIf="isLoadComplete">
   <div class="jtv-service-area">
     <div class="container">
       <div class="row">
         <div class="col col-md-3 col-sm-6 col-xs-12">
           <div>
-
           </div>
         </div>
         <div class="col col-md-3 col-sm-6 col-xs-12 ">
           <div>
-
           </div>
         </div>
         <div class="col col-md-3 col-sm-6 col-xs-12">
           <div>
-
           </div>
         </div>
         <div class="col col-md-3 col-sm-6 col-xs-12">
@@ -78,7 +74,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i
+                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div>
@@ -163,7 +159,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i
+                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div>
@@ -254,7 +250,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i
+                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div>
@@ -351,7 +347,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i
+                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div>
