--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -55,8 +55,7 @@
           <div class="toolbar">
             <div class="view-mode">
               <ul>
-                <li> <a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{slug: urlSlug}"> <i
-                      class="fa fa-th-large"></i> </a> </li>
+                  <li> <a [routerLink]="['/danh-muc-san-pham-g']"> <i class="fa fa-th-large"></i> </a> </li>
                 <li class="active"> <a [routerLink]="['/danh-muc-san-pham-l']"> <i class="fa fa-th-list"></i> </a> </li>
               </ul>
             </div>
