--- a/src/app/quick-view/quick-view.component.html
+++ b/src/app/quick-view/quick-view.component.html
@@ -1,5 +1,5 @@
-<div id="quick_view_popup-overlay"></div>
-<div style="display: block;" id="quick_view_popup-wrap">
+<div id="quick_view_popup-overlay" (click)="handleClickCloseModal($event)"></div>
+<div style="display: block;" id="quick_view_popup-wrap" (click)="handleClickCloseModal($event)">
   <div id="quick_view_popup-outer">
     <div id="quick_view_popup-content">
       <div style="width:auto;height:auto;overflow: auto;position:relative;">
