--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -58,11 +58,11 @@
           </p>
           <div class="social">
             <ul class="inline-mode">
-              <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-              <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank" href="https://plus.google.com"><i class="fa fa-google"></i></a></li>
+              <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a></li>
+              <!-- <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank" href="https://plus.google.com"><i class="fa fa-google"></i></a></li>
               <li class="social-network tw"><a title="Connect us on Twitter" target="_blank" href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-              <li class="social-network linkedin"><a title="Connect us on Pinterest" target="_blank" href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
-              <li class="social-network rss"><a title="Connect us on Instagram" target="_blank" href="https://instagram.com/"><i class="fa fa-instagram"></i></a></li>
+              <li class="social-network linkedin"><a title="Connect us on Pinterest" target="_blank" href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li> -->
+              <li class="social-network rss"><a title="Connect us on Shopee" target="_blank" href="https://shopee.vn/shop/1023848407/"><img src="../assets/images/shopee-xanh.png" alt=""></a></li>
             </ul>
           </div>
         </div>
