--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -75,22 +75,16 @@
                 <div id="search">
                   <form>
                     <div class="input-group">
-                      <select class="cate-dropdown hidden-xs hidden-sm" name="category_id">
-                        <option>All Categories</option>
-                        <option>women</option>
-                        <option>&nbsp;&nbsp;&nbsp;Chair </option>
-                        <option>&nbsp;&nbsp;&nbsp;Decoration</option>
-                        <option>&nbsp;&nbsp;&nbsp;Lamp</option>
-                        <option>&nbsp;&nbsp;&nbsp;Handbags </option>
-                        <option>&nbsp;&nbsp;&nbsp;Sofas </option>
-                        <option>&nbsp;&nbsp;&nbsp;Essential </option>
-                        <option>Men</option>
-                        <option>Electronics</option>
-                        <option>&nbsp;&nbsp;&nbsp;Mobiles </option>
-                        <option>&nbsp;&nbsp;&nbsp;Music &amp; Audio </option>
+                      <select class="cate-dropdown hidden-xs hidden-sm" name="category_id" #cateSelect>
+                        <option value="" selected>Tất cả</option>
+                        <ng-container *ngFor="let item of this.menuSearch">
+                          <option  [value]="item.urlSlug">{{item.categoryName}}</option>
+                        </ng-container>
+                        
+
                       </select>
                       <input #inputSearch  type="text" class="form-control" placeholder="Bạn muốn tìm..." name="search">
-                      <button class="btn-search" type="button" (click)="searchFilter($event,inputSearch.value)"><i class="fa fa-search"></i></button>
+                      <button class="btn-search" type="button" (click)="searchFilter($event,inputSearch.value, cateSelect.value)"><i class="fa fa-search"></i></button>
                     </div>
                   </form>
                 </div>
