--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -132,12 +132,6 @@
             <div class="pagination-area" >
               <my-pagination *ngIf="isLoadComplete" [total]="visibleItems.total" [formControl]="paginationControl">
               </my-pagination>
-              <!-- <ul>
-                <li><a class="active" href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#"><i class="fa fa-angle-right"></i></a></li>
-              </ul> -->
             </div>
           </div>
         </div>
@@ -193,27 +187,56 @@
           </div>
           <div class="block shop-by-side">
             <div class="sidebar-bar-title">
-              <h3>Shop By</h3>
+              <h3>Bộ lọc sản phẩm</h3>
             </div>
             <div class="block-content">
               <div *ngIf="isLoadComplete">
                 <ng-container *ngFor="let group of groupSearch; let i = index;">
-                  <div class="block-filter">
-                    <div class="filter-header"(click)="handleClickGroupSearch($event, i.toString())"><a >{{group.filterDisplayText}} </a><i class="fa fa-angle-right"></i></div>
+                   <!-- 0 là search text 1 là search price -->
+                  <ng-container *ngIf="group.typeSearch == 1">
                     
-                    <div [attr.id]="'body-inner' + i" [ngClass]="{'filter-body-inner': i == 0, 'filter-body-inner noactive': i != 0}">
-                      <ul class="filter-body">
-                        <ng-container *ngFor="let item of group.itemFilterValues">
-                          <li class="filter-item">
-                            <input type="checkbox" id="{{item.filterValueID}}" name="cc" />
-                            <label for="p1"> <span class="button"></span> &nbsp; {{item.filterValueDisplayText}}<span class="count"></span> </label>
-                          </li>
-                        </ng-container>
-                      </ul>
+                    <div class="block-filter">
+                      <div class="filter-header" (click)="handleClickGroupSearch($event, i.toString())">
+                        <a>{{group.filterDisplayText}} </a><i class="fa fa-angle-right"></i></div>
+                      <div [attr.id]="'body-inner' + i"
+                        [ngClass]="{'filter-body-inner': i == 0, 'filter-body-inner noactive': i != 0}">
+                        <ul class="filter-body">
+                          <li class="filter-item" *ngFor="let item of group.itemFilterValues">
+                            <input type="checkbox" id="{{item.filterValueID}}" class="checkmark" (change)="changeSelectionPrice($event, item.filterValueID)" 
+                              [ngModel]="selectedPriceIndex === item.filterValueID" name="fieldName" ngDefaultControl/>
+                            <label [ngModel]="selectedPriceIndex === item.filterValueID" name="fieldName" ngDefaultControl for="p1" (click)="changeSelectionPrice($event, item.filterValueID)"> <span class="button" ></span> &nbsp; {{item.filterValueDisplayText}}<span class="count"></span> </label>
+                        </ul>
+                        <div class="sp">Hoặc nhập giá dưới đây</div>
+                        <div class="inputPrice">
+
+                          <input #inputMinPrice  type="number" class="" placeholder="" name="minPrice" maxlength="10" min="0"  [(ngModel)]="minPrice">
+                          <input #inputMaxPrice  type="number" class="" placeholder="" name="maxPrice" maxlength="10" min="0" [(ngModel)]="maxPrice">
+                        </div>
+                        <div style="margin-top: 15px;"><a type="button" (click)="this.onPageChange(this.pagination);" class="but_ok_2"><i class="fa fa-check"></i>&nbsp; Áp dụng</a></div>
+                        
+                      </div>
                     </div>
-                  </div>       
+                    
+                  </ng-container>
+                 
+
+                  <ng-container *ngIf="group.typeSearch == 0">
+                    <div class="block-filter">
+                      <div class="filter-header" (click)="handleClickGroupSearch($event, i.toString())">
+                        <a>{{group.filterDisplayText}} </a><i class="fa fa-angle-right"></i></div>
+                      <div [attr.id]="'body-inner' + i"
+                        [ngClass]="{'filter-body-inner': i == 0, 'filter-body-inner noactive': i != 0}">
+                        <ul class="filter-body">
+                          <li class="filter-item" *ngFor="let item of group.itemFilterValues">
+                            <input type="checkbox" id="{{item.filterValueID}}" name="cc" class="checkmark"  (change)="changeSelectionKeySearch($event, item.filterValueID)" 
+                            [ngModel]="selectedPriceIndex === item.filterValueID" name="fieldName" ngDefaultControl/>
+                            <label for="p1"> <span class="button"></span> &nbsp; {{item.filterValueDisplayText}}<span class="count"></span> </label>
+                        </ul>
+                      </div>
+                    </div>
+                  </ng-container>
                 </ng-container>
-               </div>          
+              </div>
             </div>
           </div>
           
