--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -50,7 +50,7 @@
               <div class="view-mode">
                 <ul>
                   <li class="active"> <a [routerLink]="['/danh-muc-san-pham-g']" > <i class="fa fa-th-large"></i> </a> </li>
-                  <li> <a [routerLink]="['/danh-muc-san-pham-l']"> <i class="fa fa-th-list"></i> </a> </li>
+                  <li> <a [routerLink]="['/danh-muc-san-pham-l']" [queryParams]="{searchKey: this.searchKey}"> <i class="fa fa-th-list"></i> </a> </li>
                 </ul>
               </div>
               <div class="sorter">
@@ -59,8 +59,6 @@
                   <select #sortSelecte (change)="onSelectedSort(sortSelecte.value)">
                     <option selected="selected" value="1">Giá tăng dần</option>
                     <option value="2">Giá giảm dần</option>
-                    <!-- <option>Price</option>
-                    <option>Size</option> -->
                   </select>
                 </div>
                 <div class="short-by page">
